--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/jaylen-robinson-00ab9519a target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/jaylen-robinson-00ab9519a " target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<!--<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
-							<li><a href="https://github.com/Catylen target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://github.com/Catylen" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<!--<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->
 							<li><a href="mailto:robinsonjaylen@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
@@ -173,7 +173,7 @@
 							</header>
 							
 							<ul>
-									<a href="https://drive.google.com/file/d/1TJzubAbBeyVOOHHcuG1Rb9UHaD_dr3J8/view?usp=sharing target="_blank" >Resume-PDF</a>
+									<a href="https://drive.google.com/file/d/1TJzubAbBeyVOOHHcuG1Rb9UHaD_dr3J8/view?usp=sharing" target="_blank" >Resume-PDF</a>
 							</ul>
 							
 
