--- a/index.html
+++ b/index.html
@@ -99,17 +99,18 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="NBA_Salary_Analysis.html" class="image fit"><img src="images/pic02.jpg" alt="Project 1 Image" /></a>
 										<header>
-											<h3>NBA Salary Analysis</h3>
+											<h3>Project 1: NBA Salary Analysis</h3>
 										</header>
+										<p>Description of your NBA Salary Analysis project. You can provide a brief summary here.</p>
 									</article>
-									<article class="item">
+									<!--<article class="item">
 										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
 											<h3>Rhoncus Semper</h3>
 										</header>
-									</article>
+									</article>-->
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
@@ -118,12 +119,12 @@
 											<h3>Magna Nullam</h3>
 										</header>
 									</article>
-									<article class="item">
+									<!--<article class="item">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Natoque Vitae</h3>
 										</header>
-									</article>
+									</article>-->
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
@@ -132,12 +133,12 @@
 											<h3>Dolor Penatibus</h3>
 										</header>
 									</article>
-									<article class="item">
+									<!--<article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
 											<h3>Orci Convallis</h3>
 										</header>
-									</article> 
+									</article> -->
 								</div>
 							</div>
 
