--- a/index.html
+++ b/index.html
@@ -114,10 +114,11 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="salary_scrape.html" class="image fit"><img src="images/pic02.jpg" alt="Project 1 Image" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Project 2: NBA Salary Scrape</h3>
 										</header>
+										<p>Scraping player salary data with webdriver. </p>
 									</article>
 									<!--<article class="item">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
@@ -130,7 +131,7 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>Work In Progress</h3>
 										</header>
 									</article>
 									<!--<article class="item">
