--- a/index.html
+++ b/index.html
@@ -129,10 +129,11 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="clicker.html" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>Work In Progress</h3>
+											<h3>Cat Clicker</h3>
 										</header>
+										<p> Clicker game made using Javascript based upon cats. </p>
 									</article>
 									<!--<article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
