--- a/clicker.html
+++ b/clicker.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href = "index.css" type = "text/css" rel = "stylesheet" />
+        <link href = "clicker.css" type = "text/css" rel = "stylesheet" />
 
-        <script src= "index.js" type = "text/javascript"> </script>
+        <script src= "clicker.js" type = "text/javascript"> </script>
     </head>
 
     <body>
@@ -25,7 +25,7 @@
             <button onclick="resetGame();">Reset Game</button>
         </div>
 
-        <script src= "index.js" type = "text/javascript"></script>
+        <script src= "clicker.js" type = "text/javascript"></script>
     </body>
 
 </html>
